<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <ImageView
        android:id="@+id/ivprofile"
        android:layout_width="184dp"
        android:layout_height="203dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="432dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_box_black_24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:textColor="#E91E63" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenGallary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="#E91E63" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:textColor="#E91E63" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="342dp"
        android:layout_height="58dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#E91E63"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOpenGallary"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#E91E63"
        android:text="@string/open_picture_gallary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivprofile" />


</androidx.constraintlayout.widget.ConstraintLayout>